// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Header /> > renders as expected by default 1`] = `
<body>
  <div>
    <header>
      <nav
        class="d_flex bd-b-w_2px bd-b-c_border border-bottom-style_solid ai_center jc_space-between w_100% py_4 px_2"
      >
        <div
          class=" d_flex gap_4 ai_center jc_start"
        >
          <div>
            HomeLogo
          </div>
          <div>
            home
          </div>
        </div>
        <div
          class=" d_flex gap_2 ai_center jc_end"
        >
          <button
            aria-label="Switch to light mode"
            class="d_inline-flex ai_center jc_center w_40px h_40px bdr_full bd_1px_solid bd-c_border bg-c_surface c_text.primary cursor_pointer trs_all_0.2s fs_16px hover:bg-c_accent hover:bd-c_primary hover:trf_rotate(15deg)_scale(1.1) focusVisible:ring_2px_solid focusVisible:ring-c_primary focusVisible:ring-o_2px"
            id="theme-toggle"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="color: #f59e0b;"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"
              />
            </svg>
          </button>
          <div>
            UserLogin
          </div>
        </div>
      </nav>
    </header>
  </div>
</body>
`;

exports[`<Header /> > renders correctly when user logged in 1`] = `
<body>
  <div>
    <header>
      <nav
        class="d_flex bd-b-w_2px bd-b-c_border border-bottom-style_solid ai_center jc_space-between w_100% py_4 px_2"
      >
        <div
          class=" d_flex gap_4 ai_center jc_start"
        >
          <div>
            HomeLogo
          </div>
          <div>
            home
          </div>
          <div>
            dashboard
          </div>
          <div>
            accounts
          </div>
          <div>
            forecast
          </div>
          <div>
            mortgage
          </div>
          <div>
            budget
          </div>
          <div>
            tax
          </div>
        </div>
        <div
          class=" d_flex gap_2 ai_center jc_end"
        >
          <button
            aria-label="Switch to light mode"
            class="d_inline-flex ai_center jc_center w_40px h_40px bdr_full bd_1px_solid bd-c_border bg-c_surface c_text.primary cursor_pointer trs_all_0.2s fs_16px hover:bg-c_accent hover:bd-c_primary hover:trf_rotate(15deg)_scale(1.1) focusVisible:ring_2px_solid focusVisible:ring-c_primary focusVisible:ring-o_2px"
            id="theme-toggle"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="color: #f59e0b;"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"
              />
            </svg>
          </button>
          <a
            href="/app/profile"
          >
            <svg
              fill="currentColor"
              height="22"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 496 512"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 96c48.6 0 88 39.4 88 88s-39.4 88-88 88-88-39.4-88-88 39.4-88 88-88zm0 344c-58.7 0-111.3-26.6-146.5-68.2 18.8-35.4 55.6-59.8 98.5-59.8 2.4 0 4.8.4 7.1 1.1 13 4.2 26.6 6.9 40.9 6.9 14.3 0 28-2.7 40.9-6.9 2.3-.7 4.7-1.1 7.1-1.1 42.9 0 79.7 24.4 98.5 59.8C359.3 421.4 306.7 448 248 448z"
              />
            </svg>
          </a>
          <div>
            UserLogin
          </div>
        </div>
      </nav>
    </header>
  </div>
</body>
`;

exports[`<Header /> > renders without ColorModeSwitch 1`] = `
<body>
  <div>
    <header>
      <nav
        class="d_flex bd-b-w_2px bd-b-c_border border-bottom-style_solid ai_center jc_space-between w_100% py_4 px_2"
      >
        <div
          class=" d_flex gap_4 ai_center jc_start"
        >
          <div>
            HomeLogo
          </div>
          <div>
            home
          </div>
        </div>
        <div
          class=" d_flex gap_2 ai_center jc_end"
        >
          <button
            aria-label="Switch to light mode"
            class="d_inline-flex ai_center jc_center w_40px h_40px bdr_full bd_1px_solid bd-c_border bg-c_surface c_text.primary cursor_pointer trs_all_0.2s fs_16px hover:bg-c_accent hover:bd-c_primary hover:trf_rotate(15deg)_scale(1.1) focusVisible:ring_2px_solid focusVisible:ring-c_primary focusVisible:ring-o_2px"
            id="theme-toggle"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="color: #f59e0b;"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"
              />
            </svg>
          </button>
          <div>
            UserLogin
          </div>
        </div>
      </nav>
    </header>
  </div>
</body>
`;
